--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+scikit-learn~=1.6.1
+pandas~=2.2.3
+joblib~=1.5.0
 mlflow~=2.22.0
-mlflow-skinny~=2.22.0
-scikit-learn
-pandas
-numpy
-joblib
-pytest
 azure-storage-blob
 azure-identity
+pytest~=8.3.5
+mlflow-skinny~=2.22.0
+numpy~=2.2.6
