--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     env:
         AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
-        MLFLOW_URI: ${{vars.MLFLOW_URI}}
+        MLFLOW_URL: ${{vars.MLFLOW_URL}}
         EXPERIMENT_NAME: ${{vars.EXPERIMENT_NAME}}
         MODEL_NAME: ${{vars.MODEL_NAME}}
     runs-on: ubuntu-latest
