--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ permissions:
 
 jobs:
   build:
-    env:
-        AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
-        MLFLOW_URL: ${{vars.MLFLOW_URL}}
-        EXPERIMENT_NAME: ${{vars.EXPERIMENT_NAME}}
-        MODEL_NAME: ${{vars.MODEL_NAME}}
     runs-on: ubuntu-latest
+    env:
+      AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
+      MLFLOW_URL: ${{vars.MLFLOW_URL}}
+      EXPERIMENT_NAME: ${{vars.EXPERIMENT_NAME}}
+      MODEL_NAME: ${{vars.MODEL_NAME}}
     steps:      
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,20 +32,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install scikit-learn pandas joblib mlflow azure-storage-blob azure-identity pytest mlflow-skinny numpy
-      
+          pip install -r requirements.txt
+
       - name: Download Adult dataset
         run: |
-          curl -o data/raw/adult.data http://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data
-          curl -o data/raw/adult.test http://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test
-          
+          curl -o data/raw/adult.data https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data
+          curl -o data/raw/adult.test https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test
+      
       - name: Train and save model
         run: |
           python src/main.py
       
       - name: Save run ID to env
         run: echo "RUN_ID=$(cat run_id.txt)" >> $GITHUB_ENV
-         
+          
       - name: Run model tests
         run: python model_tests/test_model.py
 
